--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Kaoru Kohashigawa",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^2.3.1",
+    "ejs-mate": "^2.1.0",
     "express": "^4.12.3",
     "harmonize": "^1.4.1",
     "socket.io": "^1.3.5"
