--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
     "express": "^4.12.3",
     "harmonize": "^1.4.1",
     "socket.io": "^1.3.5"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-util": "^3.0.4",
+    "gulp-watch": "^4.2.4",
+    "require-dir": "^0.3.0"
   }
 }
