--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "socket.io": "^1.3.5"
   },
   "devDependencies": {
+    "del": "^1.1.1",
     "gulp": "^3.8.11",
+    "gulp-livereload": "^3.8.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.0",
+    "webpack": "^1.8.9"
   }
 }
