--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "ejs-mate": "^2.1.0",
     "express": "^4.12.3",
     "harmonize": "^1.4.1",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "socket.io-client": "^1.3.5"
   },
   "devDependencies": {
+    "babel-core": "^5.1.13",
+    "babel-loader": "^5.0.0",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-livereload": "^3.8.0",
