--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "ejs-mate": "^2.1.0",
     "express": "^4.12.3",
     "harmonize": "^1.4.1",
+    "hiredis": "^0.3.0",
+    "jquery": "^2.1.3",
+    "nodemon": "^1.3.7",
+    "redis": "^0.12.1",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5"
   },
   "devDependencies": {
     "babel-core": "^5.1.13",
     "babel-loader": "^5.0.0",
+    "browser-sync": "^2.6.5",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
-    "gulp-livereload": "^3.8.0",
+    "gulp-nodemon": "^2.0.2",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "require-dir": "^0.3.0",
