--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Kaoru Kohashigawa",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.12.3",
     "ejs": "^2.3.1",
     "ejs-mate": "^2.1.0",
     "express": "^4.12.3",
@@ -14,7 +15,8 @@
     "nodemon": "^1.3.7",
     "redis": "^0.12.1",
     "socket.io": "^1.3.5",
-    "socket.io-client": "^1.3.5"
+    "socket.io-client": "^1.3.5",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^5.1.13",
@@ -23,6 +25,7 @@
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-nodemon": "^2.0.2",
+    "gulp-shell": "^0.4.1",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "require-dir": "^0.3.0",
