--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Kaoru Kohashigawa",
   "license": "MIT",
   "dependencies": {
+    "backbone": "^1.1.2",
+    "backbone.marionette": "^2.4.1",
+    "backbone.radio": "^0.9.0",
     "body-parser": "^1.12.3",
     "ejs": "^2.3.1",
     "ejs-mate": "^2.1.0",
@@ -24,12 +27,14 @@
     "browser-sync": "^2.6.5",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
     "gulp-nodemon": "^2.0.2",
+    "gulp-sass": "^1.3.3",
     "gulp-shell": "^0.4.1",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.0",
     "webpack": "^1.8.9"
   }
 }
