--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^5.0.0",
     "browser-sync": "^2.6.5",
     "del": "^1.1.1",
+    "ejs-loader": "^0.2.1",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-nodemon": "^2.0.2",
